@@ -1,6 +1,7 @@
 # December 24, 2012
 	- passwords can now be hashed via hashPassword(str) as long as config.functions.php is included (implied when config.php is)
 	- moderator posts are now saved as distinguished when they are posted to the database as opposed to at read time
+	- cleaned up viewthread so it has a more reasonable font size, and usernames are now next to the correct posts
 
 # December 23, 2012
 	- moderator posts can now be made by defining a key(s) in includes/function.postmessage.php
